@@ -1,3 +1,15 @@
+2012-10-25  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Bring device geolocation and orientation emulation from behind the experiment
+        https://bugs.webkit.org/show_bug.cgi?id=100220
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/front-end/Settings.js:
+        (WebInspector.ExperimentsSettings):
+        * inspector/front-end/SettingsScreen.js:
+        (WebInspector.UserAgentSettingsTab):
+
 2012-10-26  Yury Semikhatsky  <yurys@chromium.org>
 
         Memory instrumentation: report memory occupied by ResourceRequest instead of its base ResourceRequestBase
